# fuelflux.triac

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: triac_uart_cli.cpp
src/demo/: Makefile  readme_CN.txt  readme_EN.txt
src/demo/examples/: main.c
src/demo/lib/2-CH_SCR_HAT/: SCR_Drive.c  SCR_Drive.h
src/demo/lib/Config/: DEV_Config.c  DEV_Config.h
